--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,6 +2,29 @@
 
 {% block content %}
 
-<h1 class="p-4">Hello World</h1>
+<div class="col-md-6 offset-md-3">
+
+  {% if user.is_authenticated %}
+
+  <h1>Hello World</h1>
+
+  {% else %}
+
+  <h1>Login</h1>
+  <form method="POST" action="{% url 'home' %}">
+      {% csrf_token %}
+      <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Username</label>
+          <input type="text" class="form-control" name="username" placeholder="John Doe" required>
+      </div>
+      <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <input type="password" class="form-control" name="password" placeholder="Password" required>
+      </div>
+      <button type="submit" class="btn btn-secondary my-2">Login</button>
+  </form>
+</div>
+
+{% endif %}
 
 {% endblock %}
