--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,29 +2,69 @@
 
 {% block content %}
 
-<div class="col-md-6 offset-md-3">
-
   {% if user.is_authenticated %}
+  <div class="col-lg-12 col-md-12 col-sm-12">
+    <table class="table table-hover table-striped">
+      <thead>
+        <tr class="table-dark">
+          <th scope="col">Id</th>
+          <th scope="col">Name</th>
+          <th scope="col">Email</th>
+          <th scope="col">Phone</th>
+          <th scope="col">Address</th>
+          <th scope="col">City</th>
+          <th scope="col">State</th>
+          <th scope="col">Zip Code</th>
+          <!-- <th scope="col">Created At</th> -->
+        </tr>
+      </thead>
+      <tbody>
+      {% if customers %}
+        {% for customer in customers %}
+        
+        <tr>
+          <td>{{ customer.id }}</td>
+          <td>{{ customer.first_name }} {{ customer.last_name }}</td>
+          <td>{{ customer.email }}</td>
+          <td>{{ customer.phone }}</td>
+          <td>{{ customer.address }}</td>
+          <td>{{ customer.city }}</td>
+          <td>{{ customer.state }}</td>
+          <td>{{ customer.zipcode }}</td>
+          <!-- <td>{{ customer.created_at|date:'m/d/Y H:i' }}</td> -->
+        </tr>
 
-  <h1>Hello World</h1>
+        {% endfor %}
+      {% endif %}
+      </tbody>
+    </table>
+  </div>
+
+    <!-- {% if customers %}
+      {% for customer in customers %}
+      <p>{{ customer.first_name }}</p>  
+      <p>{{ customer.last_name }}</p>  
+      <p>{{ customer.email }}</p>  
+      {% endfor %}
+    {% endif %} -->
 
   {% else %}
+  <div class="col-md-6 offset-md-3">
+    <h1>Login</h1>
+    <form method="POST" action="{% url 'home' %}">
+        {% csrf_token %}
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Username</label>
+            <input type="text" class="form-control" name="username" placeholder="John Doe" required>
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Password</label>
+            <input type="password" class="form-control" name="password" placeholder="Password" required>
+        </div>
+        <button type="submit" class="btn btn-secondary my-2">Login</button>
+    </form>
+  </div>
 
-  <h1>Login</h1>
-  <form method="POST" action="{% url 'home' %}">
-      {% csrf_token %}
-      <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Username</label>
-          <input type="text" class="form-control" name="username" placeholder="John Doe" required>
-      </div>
-      <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" name="password" placeholder="Password" required>
-      </div>
-      <button type="submit" class="btn btn-secondary my-2">Login</button>
-  </form>
-</div>
-
-{% endif %}
+  {% endif %}
 
 {% endblock %}
