--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -4,24 +4,25 @@
 
   {% if user.is_authenticated %}
   <div class="col-lg-12 col-md-12 col-sm-12">
-    <table class="table table-hover table-striped">
-      <thead>
-        <tr class="table-dark">
-          <th scope="col">Id</th>
-          <th scope="col">Name</th>
-          <th scope="col">Email</th>
-          <th scope="col">Phone</th>
-          <!-- <th scope="col">Address</th> -->
-          <th scope="col">City</th>
-          <th scope="col">State</th>
-          <!-- <th scope="col">Zip Code</th> -->
-          <!-- <th scope="col">Created At</th> -->
-        </tr>
-      </thead>
-      <tbody>
       {% if customers %}
+
+      <h2 class="text-center p-4">Customers Table</h2>
+      <table class="table table-hover table-striped">
+        <thead>
+          <tr class="table-dark">
+            <th scope="col">Id</th>
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Phone</th>
+            <!-- <th scope="col">Address</th> -->
+            <th scope="col">City</th>
+            <th scope="col">State</th>
+            <!-- <th scope="col">Zip Code</th> -->
+            <!-- <th scope="col">Created At</th> -->
+          </tr>
+        </thead>
+        <tbody>
         {% for customer in customers %}
-        
         <tr>
           <td>
             <a href="{% url 'customer' customer.id %}">
@@ -41,6 +42,13 @@
         </tr>
 
         {% endfor %}
+      {% else %}
+        <div class="text-center">
+          <p>
+            No customer, please start to register one
+            <a href="{% url 'register' %}" class="btn btn-dark">Register</a>
+          </p>
+        </div>
       {% endif %}
       </tbody>
     </table>
