add: update customer

--- a/website/templates/update_customer.html
+++ b/website/templates/update_customer.html
@@ -4,13 +4,13 @@
 <div class="col-md-6 offset-md-3">
   <h1>Add Record</h1>
 
-  <form method="POST" action="{% url 'add_customer' %}">
+  <form method="POST">
     {% csrf_token %}
 
     {{ form.as_p }}
 
     <button type="submit" class="btn btn-secondary">
-        Add Customer
+        Update Customer
     </button>
   </form>
 </div>
