--- a/website/templates/customer.html
+++ b/website/templates/customer.html
@@ -60,6 +60,7 @@
   
   <div class="py-4 d-flex justify-content-end gap-2">
     <a href="{% url 'home' %}" class="btn btn-dark">Voltar</a>
+    <a href="{% url 'update_customer' customer.id %}" class="btn btn-warning">Update</a>
     <a href="{% url 'delete_customer' customer.id %}" class="btn btn-danger">Deletar</a>
   </div>
 
